--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,9 +1,15 @@
 sign_in_title=Sign in
 log_in=Sign in
-username=Username
+name=Name
+surname=Surname
+email=Email
 password=Password
+sign_up= Sign up
+sign_in_redirect=Have an account already? Sign in here.
 register_redirect_btn=No account yet? Sign up here.
 add_equipment_btn = Add equipment
 eq_name=Equipment name
 eq_price=Price for reservation
 eq_categ=Equipment category
+categ_add_btn=Add category
+eq_type_add_btn=Add equipment type
