categories & equipment update
- image edit fixed
- categories & equipment script transformed
- multi-lang text updated

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,15 +1,43 @@
+sign_up_title=Sign up
+sign_up_input_name=Name
+sign_up_input_surname=Surname
+sign_up_input_email=E-mail
+sign_up_input_password=Password
+sign_up_btn_submit=Sign up
+sign_up_redirect=Already have an account? Sign in here.
+
 sign_in_title=Sign in
-log_in=Sign in
-name=Name
-surname=Surname
-email=Email
-password=Password
-sign_up= Sign up
-sign_in_redirect=Have an account already? Sign in here.
-register_redirect_btn=No account yet? Sign up here.
-add_equipment_btn = Add equipment
-eq_name=Equipment name
-eq_price=Price for reservation
-eq_categ=Equipment category
-categ_add_btn=Add category
-eq_type_add_btn=Add equipment type
+sign_in_input_username=E-mail
+sign_in_input_password=Password
+sign_in_btn_submit=Sign in
+sign_in_redirect=No account yet? Sign up here.
+
+cat_title=Categories
+cat_redirect_reservations=Reservations
+cat_btn_logout=Logout
+cat_btn_sign_in=Sign in
+cat_btn_add=Add new category
+cat_btn_edit=Edit category
+cat_btn_delete=Delete
+cat_btn_open=Open
+cat_modal_img=Click to change the image
+cat_modal_name=Category name
+cat_modal_save=Save
+cat_modal_cancel=Cancel
+
+eq_redirect_cat=Categories
+eq_redirect_res=Reservations
+eq_filters=Filters
+eq_btn_sign_in=Sign in
+eq_btn_logout=Logout
+eq_btn_add=Add new equipment
+eq_btn_edit=Edit equipment
+eq_btn_delete=Delete
+eq_btn_reserve=Reserve
+eq_modal_img=Click to change the image
+eq_modal_name=Category name
+eq_modal_desc=Category description
+eq_modal_price=Price per day
+eq_modal_quantity=Quantity
+eq_modal_save=Save
+eq_modal_cancel=Cancel
