--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,12 +1,4 @@
 #http://localhost:8081/?lang=pl
-sign_in_title=Logowanie
-log_in=Zaloguj si?
-username=Login
-password=Has?o
-register_redirect_btn=Nie masz konta? Zarejestruj si?.
-add_equipment_btn=Dodaj sprz?t
-eq_name=Nazwa sprz?tu
-eq_price=Cena za rezerwacj?
-eq_categ=Typ sprz?tu
+eq_btn_reserve=Zarezerwuj
 
 
