equipment filter added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,7 +27,6 @@ cat_modal_cancel=Cancel
 
 eq_redirect_cat=Categories
 eq_redirect_res=Reservations
-eq_filters=Filters
 eq_btn_sign_in=Sign in
 eq_btn_logout=Logout
 eq_btn_add=Add new equipment
@@ -41,3 +40,18 @@ eq_modal_price=Price per day
 eq_modal_quantity=Quantity
 eq_modal_save=Save
 eq_modal_cancel=Cancel
+
+sort_title=Sort by:
+sort_price_LH=Price: Low to high
+sort_price_HL=Price: High to low
+sort_quantity_LH=Quantity: Low to high
+sort_quantity_HL=Quantity: High to low
+
+filters_title=Filters
+filters_name=Equipment name
+filters_price=Price
+filters_price_from=from
+filters_price_to=to
+filters_available_title=Availability
+filters_available=Show only available
+filters_btn=Submit filters
