--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -34,8 +34,8 @@ eq_btn_edit=Edit equipment
 eq_btn_delete=Delete
 eq_btn_reserve=Reserve
 eq_modal_img=Click to change the image
-eq_modal_name=Category name
-eq_modal_desc=Category description
+eq_modal_name=Equipment name
+eq_modal_desc=Equipment description
 eq_modal_price=Price per day
 eq_modal_quantity=Quantity
 eq_modal_save=Save
@@ -55,3 +55,5 @@ filters_price_to=to
 filters_available_title=Availability
 filters_available=Show only available
 filters_btn=Submit filters
+
+reservation_modal_title=Reserve
