reservation modal update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,3 +57,5 @@ filters_available=Show only available
 filters_btn=Submit filters
 
 reservation_modal_title=Reserve
+reservation_modal_date_pickup=Pickup date
+reservation_modal_date_return=Return date
