reservation.html update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,5 +57,12 @@ filters_available=Show only available
 filters_btn=Submit filters
 
 reservation_modal_title=Reserve
+res_modal_quantity=Quantity
 reservation_modal_date_pickup=Pickup date
 reservation_modal_date_return=Return date
+
+res_title=Reservations
+res_status=Status: 
+res_reservationDate=Reservation date: 
+res_pickupDate=Pickup date: 
+res_returnDate=Return date: 
