reservation changeStatus added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -66,3 +66,6 @@ res_status=Status:
 res_reservationDate=Reservation date: 
 res_pickupDate=Pickup date: 
 res_returnDate=Return date: 
+res_btn_pickup=Confirm pickup
+res_btn_return=Confirm return
+res_btn_cancel=Cancel reservation
