--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,6 +14,7 @@ sign_in_redirect=No account yet? Sign up here.
 
 cat_title=Categories
 cat_redirect_reservations=Reservations
+cat_quantity=Available equipment: 
 cat_btn_logout=Logout
 cat_btn_sign_in=Sign in
 cat_btn_add=Add new category
@@ -62,10 +63,15 @@ reservation_modal_date_pickup=Pickup date
 reservation_modal_date_return=Return date
 
 res_title=Reservations
-res_status=Status: 
-res_reservationDate=Reservation date: 
-res_pickupDate=Pickup date: 
-res_returnDate=Return date: 
+res.code=Reservation code: {0}
+res.status=Status: {0}
+res.reservationDate=Reservation date: {0}
+res.pickupDate=Pickup date: {0}
+res.returnDate=Return date: {0}
+res.quantity=Equipment quantity: {0}
+res.cost=Rent cost: {0}
+res.userFullName=Full name: {0} {1}
+res.userEmail=Email address: {0}
 res_btn_pickup=Confirm pickup
 res_btn_return=Confirm return
 res_btn_cancel=Cancel reservation
