--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -12,6 +12,8 @@ sign_in_input_password=Password
 sign_in_btn_submit=Sign in
 sign_in_redirect=No account yet? Sign up here.
 
+nav.logged=Logged as: {0}
+
 cat_title=Categories
 cat_redirect_reservations=Reservations
 cat_quantity=Available equipment: 
@@ -41,6 +43,8 @@ eq_modal_price=Price per day
 eq_modal_quantity=Quantity
 eq_modal_save=Save
 eq_modal_cancel=Cancel
+
+eq.price={0}z\u0142 / day
 
 sort_title=Sort by:
 sort_price_LH=Price: Low to high
