bean validation update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,31 @@
+error.required.name=The "Name" field is required.
+error.required.description=The "Description" field is required.
+error.required.price=The "Price" field is required.
+error.required.quantity=The "Quantity" field is required.
+error.required.image=An image is required.
+error.required.categoryID=A category must be selected.
+error.required.equipmentID=Equipment ID is required.
+error.required.email=Email address is required.
+error.required.password=Password is required.
+error.required.surname=Surname is required.
+
+error.min.price=Price must not be less than 0.
+error.min.quantity=Quantity must be at least 1.
+
+error.size.name=Name must be between 2 and 50 characters.
+error.size.surname=Surname must be between 2 and 50 characters.
+error.size.email=Email must be between 2 and 50 characters.
+error.size.password=Password must be between 6 and 20 characters.
+error.size.description=Description must be between 10 and 255 characters.
+
+error.sign_in.input=Wrong email or password.
+error.sign_in.sendToken=Token has been sent to your email again.
+error.sign_in.unverified=Verify your email address first.
+
+error.sign_up=User with the same email already exists.
+
+error.unknown=Unknown Error.
+
 sign_up_title=Sign up
 sign_up_input_name=Name
 sign_up_input_surname=Surname
@@ -6,11 +34,14 @@ sign_up_input_password=Password
 sign_up_btn_submit=Sign up
 sign_up_redirect=Already have an account? Sign in here.
 
+sign_in.input.sendEmail=Send verification token to my email
 sign_in_title=Sign in
 sign_in_input_username=E-mail
 sign_in_input_password=Password
 sign_in_btn_submit=Sign in
 sign_in_redirect=No account yet? Sign up here.
+sign_in.registered=You have been registered successfully! Verification token has been sent at your email address. Confirm your email to sign in.
+sign_in.verified=Email address verified successfully!
 
 nav.logged=Logged as: {0}
 
