--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,4 +1,99 @@
-#http://localhost:8081/?lang=pl
-eq_btn_reserve=Zarezerwuj
+error.required.name=Pole "Nazwa" jest wymagane.
+error.required.description=Pole "Opis" jest wymagane.
+error.required.price=Pole "Cena" jest wymagane.
+error.required.quantity=Pole "Ilo\u015B\u0107" jest wymagane.
+error.required.image=Wymagane jest zdj\u0119cie.
+error.required.categoryID=Trzeba wybra\u0107 kategori\u0119.
+error.required.equipmentID=ID sprz\u0119tu jest wymagane.
+error.required.email=Adres e-mail jest wymagany.
+error.required.password=Has\u0142o jest wymagane.
 
+error.min.price=Cena nie mo\u017Ce by\u0107 mniejsza ni\u017C 0.
+error.min.quantity=Ilo\u015B\u0107 musi wynosi\u0107 co najmniej 1.
+
+error.size.name=Nazwa musi mie\u0107 od 2 do 50 znak\u00F3w.
+error.size.description=Opis musi mie\u0107 od 10 do 255 znak\u00F3w.
+
+sign_up_title=Rejestracja
+sign_up_input_name=Imi\u0119
+sign_up_input_surname=Nazwisko
+sign_up_input_email=E-mail
+sign_up_input_password=Has\u0142o
+sign_up_btn_submit=Zarejestruj si\u0119
+sign_up_redirect=Masz ju\u017C konto? Zaloguj si\u0119 tutaj.
+
+sign_in.input.sendEmail=Wy\u015Blij token weryfikacyjny na m\u00F3j e-mail
+sign_in_title=Logowanie
+sign_in_input_username=E-mail
+sign_in_input_password=Has\u0142o
+sign_in_btn_submit=Zaloguj si\u0119
+sign_in_redirect=Nie masz konta? Zarejestruj si\u0119 tutaj.
+
+nav.logged=Zalogowano jako: {0}
+
+cat_title=Kategorie
+cat_redirect_reservations=Rezerwacje
+cat_quantity=Dost\u0119pny sprz\u0119t:
+cat_btn_logout=Wyloguj si\u0119
+cat_btn_sign_in=Zaloguj si\u0119
+cat_btn_add=Dodaj now\u0105 kategori\u0119
+cat_btn_edit=Edytuj kategori\u0119
+cat_btn_delete=Usu\u0144
+cat_btn_open=Otw\u00F3rz
+cat_modal_img=Kliknij, aby zmieni\u0107 obraz
+cat_modal_name=Nazwa kategorii
+cat_modal_save=Zapisz
+cat_modal_cancel=Anuluj
+
+eq_redirect_cat=Kategorie
+eq_redirect_res=Rezerwacje
+eq_btn_sign_in=Zaloguj si\u0119
+eq_btn_logout=Wyloguj si\u0119
+eq_btn_add=Dodaj nowy sprz\u0119t
+eq_btn_edit=Edytuj sprz\u0119t
+eq_btn_delete=Usu\u0144
+eq_btn_reserve=Zarezerwuj
+eq_modal_img=Kliknij, aby zmieni\u0107 obraz
+eq_modal_name=Nazwa sprz\u0119tu
+eq_modal_desc=Opis sprz\u0119tu
+eq_modal_price=Cena za dzie\u0144
+eq_modal_quantity=Ilo\u015B\u0107
+eq_modal_save=Zapisz
+eq_modal_cancel=Anuluj
+
+eq.price={0}z\u0142 / dzie\u0144
+
+sort_title=Sortuj wed\u0142ug:
+sort_price_LH=Cena: od najni\u017Cszej
+sort_price_HL=Cena: od najwy\u017Cszej
+sort_quantity_LH=Ilo\u015B\u0107: od najmniejszej
+sort_quantity_HL=Ilo\u015B\u0107: od najwi\u0119kszej
+
+filters_title=Filtry
+filters_name=Nazwa sprz\u0119tu
+filters_price=Cena
+filters_price_from=od
+filters_price_to=do
+filters_available_title=Dost\u0119pno\u015B\u0107
+filters_available=Poka\u017C tylko dost\u0119pne
+filters_btn=Zastosuj filtry
+
+reservation_modal_title=Rezerwacja
+res_modal_quantity=Ilo\u015B\u0107
+reservation_modal_date_pickup=Data odbioru
+reservation_modal_date_return=Data zwrotu
+
+res_title=Rezerwacje
+res.code=Kod rezerwacji: {0}
+res.status=Status: {0}
+res.reservationDate=Data rezerwacji: {0}
+res.pickupDate=Data odbioru: {0}
+res.returnDate=Data zwrotu: {0}
+res.quantity=Zarezerwowana ilo\u015B\u0107: {0}
+res.cost=Koszt wypo\u017Cyczenia: {0}
+res.userFullName=Imi\u0119 i nazwisko: {0} {1}
+res.userEmail=Adres e-mail: {0}
+res_btn_pickup=Potwierd\u017A odbi\u00F3r
+res_btn_return=Potwierd\u017A zwrot
+res_btn_cancel=Anuluj rezerwacj\u0119
 
