bean validation & layout update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,6 +8,8 @@ error.required.equipmentID=Equipment ID is required.
 error.required.email=Email address is required.
 error.required.password=Password is required.
 error.required.surname=Surname is required.
+error.required.pickupDate=Pickup date is required.
+error.required.returnDate=Return date is required.
 
 error.min.price=Price must not be less than 0.
 error.min.quantity=Quantity must be at least 1.
@@ -43,6 +45,8 @@ sign_in_redirect=No account yet? Sign up here.
 sign_in.registered=You have been registered successfully! Verification token has been sent at your email address. Confirm your email to sign in.
 sign_in.verified=Email address verified successfully!
 
+sign_redirect=Continue as guest
+
 nav.logged=Logged as: {0}
 
 cat_title=Categories
@@ -59,6 +63,10 @@ cat_modal_name=Category name
 cat_modal_save=Save
 cat_modal_cancel=Cancel
 
+cat.toast.edited=Category has been edited.
+cat.toast.added=Category has been added.
+cat.toast.deleted=Category has been deleted.
+
 eq_redirect_cat=Categories
 eq_redirect_res=Reservations
 eq_btn_sign_in=Sign in
@@ -74,6 +82,10 @@ eq_modal_price=Price per day
 eq_modal_quantity=Quantity
 eq_modal_save=Save
 eq_modal_cancel=Cancel
+
+eq.toast.edited=Equipment has been edited.
+eq.toast.added=Equipment has been added.
+eq.toast.deleted=Equipment has been deleted.
 
 eq.price={0}z\u0142 / day
 
@@ -110,3 +122,5 @@ res.userEmail=Email address: {0}
 res_btn_pickup=Confirm pickup
 res_btn_return=Confirm return
 res_btn_cancel=Cancel reservation
+
+res.toast.added=Reservation has been added.
