last style fixes

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -58,7 +58,7 @@ cat_btn_add=Add new category
 cat_btn_edit=Edit category
 cat_btn_delete=Delete
 cat_btn_open=Open
-cat_modal_img=Click to change the image
+cat_modal_img=Click the box to change the image
 cat_modal_name=Category name
 cat_modal_save=Save
 cat_modal_cancel=Cancel
@@ -94,6 +94,8 @@ sort_price_LH=Price: Low to high
 sort_price_HL=Price: High to low
 sort_quantity_LH=Quantity: Low to high
 sort_quantity_HL=Quantity: High to low
+sort_date_LH=Date: Low to high
+sort_date_HL=Date: High to low
 
 filters_title=Filters
 filters_name=Equipment name
