security & controller tests update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -94,8 +94,8 @@ sort_price_LH=Price: Low to high
 sort_price_HL=Price: High to low
 sort_quantity_LH=Quantity: Low to high
 sort_quantity_HL=Quantity: High to low
-sort_date_LH=Date: Low to high
-sort_date_HL=Date: High to low
+sort_date_LH=Oldest first
+sort_date_HL=Newest first
 
 filters_title=Filters
 filters_name=Equipment name
@@ -112,15 +112,18 @@ reservation_modal_date_pickup=Pickup date
 reservation_modal_date_return=Return date
 
 res_title=Reservations
-res.code=Reservation code: {0}
-res.status=Status: {0}
-res.reservationDate=Reservation date: {0}
-res.pickupDate=Pickup date: {0}
-res.returnDate=Return date: {0}
-res.quantity=Equipment quantity: {0}
-res.cost=Rent cost: {0}
-res.userFullName=Full name: {0} {1}
-res.userEmail=Email address: {0}
+res.search=Search by reservation code:
+res.sort=Sort by reservation date:
+res.blank=No reservations found
+res.code=Reservation code:
+res.status=Status:
+res.reservationDate=Reservation date:
+res.pickupDate=Pickup date:
+res.returnDate=Return date:
+res.quantity=Equipment quantity:
+res.cost=Rent cost:
+res.userFullName=Full name:
+res.userEmail=Email address:
 res_btn_pickup=Confirm pickup
 res_btn_return=Confirm return
 res_btn_cancel=Cancel reservation
