service tests update

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,7 +24,9 @@ error.sign_in.input=Wrong email or password.
 error.sign_in.sendToken=Token has been sent to your email again.
 error.sign_in.unverified=Verify your email address first.
 
-error.sign_up=User with the same email already exists.
+error.email_send=No such email.
+
+error.sign_up=User with the same email already exists or this email doesn't exist.
 
 error.unknown=Unknown Error.
 
