--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -7,13 +7,23 @@ error.required.categoryID=Trzeba wybra\u0107 kategori\u0119.
 error.required.equipmentID=ID sprz\u0119tu jest wymagane.
 error.required.email=Adres e-mail jest wymagany.
 error.required.password=Has\u0142o jest wymagane.
-
+error.required.surname=Nazwisko jest wymagane.
+error.required.pickupDate=Data odbioru jest wymagana.
+error.required.returnDate=Data zwrotu jest wymagana.
 error.min.price=Cena nie mo\u017Ce by\u0107 mniejsza ni\u017C 0.
 error.min.quantity=Ilo\u015B\u0107 musi wynosi\u0107 co najmniej 1.
 
 error.size.name=Nazwa musi mie\u0107 od 2 do 50 znak\u00F3w.
+error.size.surname=Nazwisko musi zawiera\u0107 od 2 do 50 znak\u00F3w.
+error.size.email=Adres email musi mie\u0107 od 2 do 50 znak\u00F3w.
+error.size.password=Has\u0142o musi mie\u0107 od 6 do 20 znak\u00F3w.
 error.size.description=Opis musi mie\u0107 od 10 do 255 znak\u00F3w.
-
+error.sign_in.input=Z\u0142y email lub has\u0142o.
+error.sign_in.sendToken=Token zosta\u0142 wys\u0142any na email ponownie.
+error.sign_in.unverified=Najpierw zweryfikuj sw\u00F3j adres email.
+error.email_send=Nie ma takiego adresu email.
+error.sign_up=U\u017Cytkownik z tym adresem email ju\u017C istnieje lub adres email nie istnieje.
+error.unknown=Nieznany b\u0142\u0105d.
 sign_up_title=Rejestracja
 sign_up_input_name=Imi\u0119
 sign_up_input_surname=Nazwisko
@@ -28,7 +38,9 @@ sign_in_input_username=E-mail
 sign_in_input_password=Has\u0142o
 sign_in_btn_submit=Zaloguj si\u0119
 sign_in_redirect=Nie masz konta? Zarejestruj si\u0119 tutaj.
-
+sign_in.registered=Zarejestrowano pomy\u015Blnie! Token uwierzytelniaj\u0105cy zosta\u0142 wys\u0142any na tw\u00F3j adres email. Potwierd\u017A email aby si\u0119 zalogowa\u0107.
+sign_in.verified=Adres email zosta\u0142 zweryfikowany pomy\u015Blnie!
+sign_redirect=Kontynuuj jako go\u015B\u0107
 nav.logged=Zalogowano jako: {0}
 
 cat_title=Kategorie
@@ -44,7 +56,9 @@ cat_modal_img=Kliknij, aby zmieni\u0107 obraz
 cat_modal_name=Nazwa kategorii
 cat_modal_save=Zapisz
 cat_modal_cancel=Anuluj
-
+cat.toast.edited=Kategoria zosta\u0142a zmieniona.
+cat.toast.added=Kategoria zosta\u0142a dodana.
+cat.toast.deleted=Kategoria zosta\u0142a usuni\u0119ta.
 eq_redirect_cat=Kategorie
 eq_redirect_res=Rezerwacje
 eq_btn_sign_in=Zaloguj si\u0119
@@ -60,7 +74,9 @@ eq_modal_price=Cena za dzie\u0144
 eq_modal_quantity=Ilo\u015B\u0107
 eq_modal_save=Zapisz
 eq_modal_cancel=Anuluj
-
+eq.toast.edited=Sprz\u0119t zosta\u0142 zmieniony.
+eq.toast.added=Sprz\u0119t zosta\u0142 dodany. 
+eq.toast.deleted=Sprz\u0119t zosta\u0142 usuni\u0119ty.
 eq.price={0}z\u0142 / dzie\u0144
 
 sort_title=Sortuj wed\u0142ug:
@@ -68,7 +84,8 @@ sort_price_LH=Cena: od najni\u017Cszej
 sort_price_HL=Cena: od najwy\u017Cszej
 sort_quantity_LH=Ilo\u015B\u0107: od najmniejszej
 sort_quantity_HL=Ilo\u015B\u0107: od najwi\u0119kszej
-
+sort_date_LH=Od najstarszych
+sort_date_HL=Od najnowszych
 filters_title=Filtry
 filters_name=Nazwa sprz\u0119tu
 filters_price=Cena
@@ -84,6 +101,9 @@ reservation_modal_date_pickup=Data odbioru
 reservation_modal_date_return=Data zwrotu
 
 res_title=Rezerwacje
+res.search=Szukaj po kodzie rezerwacji:
+res.sort=Sortuj po dacie rezerwacji:
+res.blank=Nie znaleziono \u017Cadnych rezerwacji
 res.code=Kod rezerwacji: {0}
 res.status=Status: {0}
 res.reservationDate=Data rezerwacji: {0}
@@ -96,4 +116,5 @@ res.userEmail=Adres e-mail: {0}
 res_btn_pickup=Potwierd\u017A odbi\u00F3r
 res_btn_return=Potwierd\u017A zwrot
 res_btn_cancel=Anuluj rezerwacj\u0119
+res.toast.added=Reserwacja zosta\u0142a dodana.
 
