--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,6 +14,8 @@ error.required.returnDate=Return date is required.
 error.min.price=Price must not be less than 0.
 error.min.quantity=Quantity must be at least 1.
 
+error.quantity=Incorrect quantity.
+
 error.size.name=Name must be between 2 and 50 characters.
 error.size.surname=Surname must be between 2 and 50 characters.
 error.size.email=Email must be between 2 and 50 characters.
@@ -89,7 +91,8 @@ eq.toast.edited=Equipment has been edited.
 eq.toast.added=Equipment has been added.
 eq.toast.deleted=Equipment has been deleted.
 
-eq.price={0}z\u0142 / day
+eq.price=z\u0142 / day
+eq.quantity=Quantity:
 
 sort_title=Sort by:
 sort_price_LH=Price: Low to high
@@ -131,3 +134,4 @@ res_btn_return=Confirm return
 res_btn_cancel=Cancel reservation
 
 res.toast.added=Reservation has been added.
+eq.paging=Items per page:
