--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -13,7 +13,7 @@ error.required.returnDate=Se requiere la fecha de devoluci\u00F3n.
 
 error.min.price=El precio no debe ser menor que 0.
 error.min.quantity=La cantidad debe ser al menos 1.
-
+error.quantity=Cantidad incorrecta.
 error.size.name=El nombre debe tener entre 2 y 50 caracteres.
 error.size.surname=El apellido debe tener entre 2 y 50 caracteres.
 error.size.email=El correo electr\u00F3nico debe tener entre 2 y 50 caracteres.
@@ -86,9 +86,8 @@ eq_modal_cancel=Cancelar
 eq.toast.edited=El equipamiento ha sido editado.
 eq.toast.added=El equipamiento ha sido a\u00F1adido.
 eq.toast.deleted=El equipamiento ha sido eliminado.
-
-eq.price={0}z\u0142 / d\u00EDa
-
+eq.price=z\u0142 / d\u00EDa
+eq.quantity=Cantidad:
 sort_title=Ordenar por:
 sort_price_LH=Precio: de menor a mayor
 sort_price_HL=Precio: de mayor a menor
@@ -129,3 +128,4 @@ res_btn_return=Confirmar devoluci\u00F3n
 res_btn_cancel=Cancelar reserva
 
 res.toast.added=La reserva ha sido a\u00F1adida.
+eq.paging=Art\u00EDculos por p\u00E1gina:
