--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -13,7 +13,7 @@ error.required.returnDate=La date de retour est requise.
 
 error.min.price=Le prix ne doit pas \u00EAtre inf\u00E9rieur \u00E0 0.
 error.min.quantity=La quantit\u00E9 doit \u00EAtre au moins de 1.
-
+error.quantity=Quantit\u00E9 incorrecte.
 error.size.name=Le nom doit comporter entre 2 et 50 caract\u00E8res.
 error.size.surname=Le pr\u00E9nom doit comporter entre 2 et 50 caract\u00E8res.
 error.size.email=L'e-mail doit comporter entre 2 et 50 caract\u00E8res.
@@ -86,9 +86,8 @@ eq_modal_cancel=Annuler
 eq.toast.edited=L'\u00E9quipement a \u00E9t\u00E9 modifi\u00E9.
 eq.toast.added=L'\u00E9quipement a \u00E9t\u00E9 ajout\u00E9.
 eq.toast.deleted=L'\u00E9quipement a \u00E9t\u00E9 supprim\u00E9.
-
-eq.price={0}z\u0142 / jour
-
+eq.price=z\u0142 / jour
+eq.quantity=Quantit\u00E9:
 sort_title=Tri par :
 sort_price_LH=Prix : du plus bas au plus \u00E9lev\u00E9
 sort_price_HL=Prix : du plus \u00E9lev\u00E9 au plus bas
@@ -129,3 +128,4 @@ res_btn_return=Confirmer le retour
 res_btn_cancel=Annuler la r\u00E9servation
 
 res.toast.added=La r\u00E9servation a \u00E9t\u00E9 ajout\u00E9e.
+eq.paging=\u00C9l\u00E9ments par page:
