--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -12,7 +12,7 @@ error.required.pickupDate=Data odbioru jest wymagana.
 error.required.returnDate=Data zwrotu jest wymagana.
 error.min.price=Cena nie mo\u017Ce by\u0107 mniejsza ni\u017C 0.
 error.min.quantity=Ilo\u015B\u0107 musi wynosi\u0107 co najmniej 1.
-
+error.quantity=Nieprawid\u0142owa ilo\u015B\u0107.
 error.size.name=Nazwa musi mie\u0107 od 2 do 50 znak\u00F3w.
 error.size.surname=Nazwisko musi zawiera\u0107 od 2 do 50 znak\u00F3w.
 error.size.email=Adres email musi mie\u0107 od 2 do 50 znak\u00F3w.
@@ -77,8 +77,8 @@ eq_modal_cancel=Anuluj
 eq.toast.edited=Sprz\u0119t zosta\u0142 zmieniony.
 eq.toast.added=Sprz\u0119t zosta\u0142 dodany. 
 eq.toast.deleted=Sprz\u0119t zosta\u0142 usuni\u0119ty.
-eq.price={0}z\u0142 / dzie\u0144
-
+eq.price=z\u0142 / dzie\u0144
+eq.quantity=Ilo\u015B\u0107:
 sort_title=Sortuj wed\u0142ug:
 sort_price_LH=Cena: od najni\u017Cszej
 sort_price_HL=Cena: od najwy\u017Cszej
@@ -117,4 +117,5 @@ res_btn_pickup=Potwierd\u017A odbi\u00F3r
 res_btn_return=Potwierd\u017A zwrot
 res_btn_cancel=Anuluj rezerwacj\u0119
 res.toast.added=Reserwacja zosta\u0142a dodana.
+eq.paging=Element\u00F3w na stron\u0119:
 
